// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GeoNodeSyncProgress template GlPopover renders each row of popover correctly 1`] = `
<div
  class="d-flex align-items-center my-1"
>
  <div
    class="mr-2 bg-transparent gl-w-5 gl-h-2"
  />
   
  <span
    class="flex-grow-1 mr-3"
  >
    Total
  </span>
   
  <span
    class="font-weight-bold"
  >
    10
  </span>
</div>
`;

exports[`GeoNodeSyncProgress template GlPopover renders each row of popover correctly 2`] = `
<div
  class="mr-2 bg-transparent gl-w-5 gl-h-2"
/>
`;

exports[`GeoNodeSyncProgress template GlPopover renders each row of popover correctly 3`] = `
<div
  class="d-flex align-items-center my-2"
>
  <div
    class="mr-2 bg-success-500 gl-w-5 gl-h-2"
  />
   
  <span
    class="flex-grow-1 mr-3"
  >
    Synced
  </span>
   
  <span
    class="font-weight-bold"
  >
    5
  </span>
</div>
`;

exports[`GeoNodeSyncProgress template GlPopover renders each row of popover correctly 4`] = `
<div
  class="mr-2 bg-success-500 gl-w-5 gl-h-2"
/>
`;

exports[`GeoNodeSyncProgress template GlPopover renders each row of popover correctly 5`] = `
<div
  class="d-flex align-items-center my-2"
>
  <div
    class="mr-2 bg-secondary-200 gl-w-5 gl-h-2"
  />
   
  <span
    class="flex-grow-1 mr-3"
  >
    Queued
  </span>
   
  <span
    class="font-weight-bold"
  >
    2
  </span>
</div>
`;

exports[`GeoNodeSyncProgress template GlPopover renders each row of popover correctly 6`] = `
<div
  class="mr-2 bg-secondary-200 gl-w-5 gl-h-2"
/>
`;

exports[`GeoNodeSyncProgress template GlPopover renders each row of popover correctly 7`] = `
<div
  class="d-flex align-items-center my-2"
>
  <div
    class="mr-2 bg-danger-500 gl-w-5 gl-h-2"
  />
   
  <span
    class="flex-grow-1 mr-3"
  >
    Failed
  </span>
   
  <span
    class="font-weight-bold"
  >
    3
  </span>
</div>
`;

exports[`GeoNodeSyncProgress template GlPopover renders each row of popover correctly 8`] = `
<div
  class="mr-2 bg-danger-500 gl-w-5 gl-h-2"
/>
`;
